--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -26,7 +26,7 @@ html {
 body {
 	line-height: 26px;
 	background-color: #fff;
-	font-family: Lato, sans-serif;
+	font-family: Nunito, "Times New Roman", serif, sans-serif;
 	font-weight: 400;
 	font-size: 16px;
 	color: #8c9597
@@ -39,7 +39,7 @@ h4,
 h5,
 h6 {
 	font-weight: 700;
-	font-family: Poppins
+	font-family: Poppins, "Times New Roman", serif
 }
 
 h1 {
@@ -76,7 +76,7 @@ ul {
 	line-height: 26px;
 	font-size: 16px;
 	font-weight: 400;
-	font-family: Lato
+	font-family: Nunito, "Times New Roman", serif
 }
 
 input,
@@ -208,7 +208,7 @@ a:hover {
 	color: #fff;
 	position: relative;
 	float: left;
-	font-family: Lato
+	font-family: Nunito, "Times New Roman", serif
 }
 
 #header .top-header .header-navigation ul li:first-child {
@@ -293,7 +293,7 @@ a:hover {
 	color: #8c9597;
 	text-transform: none;
 	display: block;
-	font-family: Lato
+	font-family: Nunito, "Times New Roman", serif
 }
 
 #header .top-header .header-navigation ul li.menu-item-has-children .sub-menu li:hover>a {
@@ -364,7 +364,7 @@ a:hover {
 	font-weight: 700;
 	font-size: 80px;
 	color: #fff;
-	font-family: Poppins
+	font-family: Poppins, "Times New Roman", serif
 }
 
 #header .bottom-header span.span-dot {
@@ -376,7 +376,7 @@ a:hover {
 	margin-bottom: 60px;
 	font-size: 16px;
 	color: #fff;
-	font-family: Lato;
+	font-family: Nunito, "Times New Roman", serif;
 	font-weight: 400
 }
 
@@ -390,7 +390,7 @@ a:hover {
 	font-weight: 700;
 	min-width: 242px;
 	font-size: 16px;
-	font-family: Lato;
+	font-family: Nunito, "Times New Roman", serif;
 	color: #fff
 }
 
@@ -490,7 +490,7 @@ a:hover {
 	font-weight: 400;
 	font-size: 16px;
 	color: #fff;
-	font-family: Lato
+	font-family: Nunito, "Times New Roman", serif
 }
 
 #about .skill .skill-top .skill-progress-bar .ui-progressbar-value .ui-progressbar-value-top .ui-progressbar-value-triangle {
@@ -526,7 +526,7 @@ a:hover {
 	margin-left: 8px;
 	line-height: 26px;
 	font-size: 16px;
-	font-family: Lato
+	font-family: Nunito, "Times New Roman", serif
 }
 
 #about .widget_illdy_skill {
@@ -571,8 +571,8 @@ a:hover {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background: rgba(255, 255, 255, 0.6);
-	color: #5e5e5e;
+	background: rgba(255, 255, 255, 0.4);
+	color: rgba(0.0, 0.0, 0.0, 0.8);
 	visibility: hidden;
 	opacity: 0;
 	display: flex;
@@ -596,6 +596,8 @@ a:hover {
 .project_description {
 	transition: .2s;
 	transform: translateY(1em);
+	font-family: Nunito, "Times New Roman", serif, sans-serif;
+	padding: 0 15px;
 }
 
 .project:hover .project_description {
@@ -646,7 +648,7 @@ a:hover {
 	border-left: none;
 	color: #fff;
 	font-size: 16px;
-	font-family: Lato;
+	font-family: Nunito, "Times New Roman", serif;
 	font-weight: 400
 }
 
@@ -668,7 +670,7 @@ a:hover {
 #testimonials .section-content .testimonials-carousel .carousel-testimonial .testimonial-meta {
 	width: 100%;
 	color: #fff;
-	font-family: Poppins
+	font-family: Poppins, "Times New Roman", serif
 }
 
 #testimonials .section-content .testimonials-carousel .owl-controls {
@@ -734,7 +736,7 @@ a:hover {
 	line-height: 26px;
 	color: #8c9597;
 	font-size: 16px;
-	font-family: Lato;
+	font-family: Nunito, "Times New Roman", serif;
 	font-weight: 400
 }
 
@@ -844,7 +846,7 @@ a:hover {
 	line-height: 26px;
 	padding: 0 30px;
 	font-size: 16px;
-	font-family: Lato;
+	font-family: Nunito, "Times New Roman", serif;
 	color: #f1d204;
 	-webkit-transition: all .3s;
 	-moz-transition: all .3s;
@@ -891,7 +893,7 @@ a.button {
 	-moz-transition: all .3s;
 	-o-transition: all .3s;
 	transition: all .3s;
-	font-family: Lato
+	font-family: Nunito, "Times New Roman", serif
 }
 
 #latest-news .latest-news-button:hover,
@@ -943,7 +945,7 @@ a.button:hover {
 #counter .counter-number {
 	display: block;
 	color: #fff;
-	font-family: Poppins;
+	font-family: Poppins, "Times New Roman", serif;
 	font-weight: 700;
 	width: 100%
 }
@@ -1102,7 +1104,7 @@ a.button:hover {
 	font-weight: 400;
 	font-size: 16px;
 	color: #f1d204;
-	font-family: Lato;
+	font-family: Nunito, "Times New Roman", serif;
 	line-height: 26px
 }
 
@@ -1119,7 +1121,7 @@ a.button:hover {
 	line-height: 1.6;
 	font-size: 16px;
 	color: #8c9597;
-	font-family: Lato
+	font-family: Nunito, "Times New Roman", serif
 }
 
 #contact-us .section-content .contact-us-box .box-right span a {
@@ -1219,7 +1221,7 @@ a.button:hover {
 	border: 1px solid #e1e1e1;
 	display: block;
 	font-weight: 400;
-	font-family: Lato, sans-serif;
+	font-family: Nunito, "Times New Roman", serif, sans-serif;
 	color: #8c9597;
 	font-size: 16px;
 	outline: 0
@@ -1297,7 +1299,7 @@ a.button:hover {
 	-o-transition: all .3s;
 	transition: all .3s;
 	outline: 0;
-	font-family: Lato;
+	font-family: Nunito, "Times New Roman", serif;
 	font-size: 16px;
 	text-transform: initial
 }
@@ -1317,14 +1319,10 @@ a.button:hover {
 	font-size: 16px;
 	line-height: 26px;
 	font-weight: 400;
-	font-family: Lato
+	font-family: Nunito, "Times New Roman", serif
 }
 
-#footer {
-	width: 100%;
-	background-color: #292825;
-	padding: 40px 0 0
-}
+
 
 #footer .bottom-footer {
 	margin-top: 50px;
@@ -1385,7 +1383,7 @@ a.button:hover {
 	line-height: 1.15;
 	color: #fff;
 	font-size: 20px;
-	font-family: Lato;
+	font-family: Nunito, "Times New Roman", serif;
 	text-transform: initial
 }
 
@@ -1774,7 +1772,7 @@ a.button:hover {
 	font-weight: 700;
 	font-size: 20px;
 	line-height: 24px;
-	font-family: Poppins;
+	font-family: Poppins, "Times New Roman", serif;
 	width: 100%;
 	background-color: #f1d204;
 	text-align: center;
@@ -2003,7 +2001,7 @@ a.button:hover {
 	display: block;
 	font-size: 20px;
 	font-weight: 700;
-	font-family: Poppins;
+	font-family: Poppins, "Times New Roman", serif;
 	line-height: 24px
 }
 
@@ -2033,7 +2031,7 @@ footer .widget ul li a.rsswidget {
 span.rss-date {
 	font-size: 12px;
 	font-weight: 400;
-	font-family: Lato;
+	font-family: Nunito, "Times New Roman", serif;
 	line-height: 24px;
 	display: block
 }
@@ -2466,7 +2464,7 @@ textarea {
 	padding: 5px 10px;
 	border: 1px solid #d7d7d7;
 	outline: 0;
-	font-family: Lato, sans-serif;
+	font-family: Nunito, "Times New Roman", serif, sans-serif;
 	font-weight: 400;
 	color: #8c9597;
 	resize: none;
@@ -2491,7 +2489,7 @@ input[type=submit] {
 	padding: 0 40px;
 	display: inline-block;
 	border: 0;
-	font-family: Lato, sans-serif;
+	font-family: Nunito, "Times New Roman", serif, sans-serif;
 	font-weight: 700;
 	color: #fff;
 	-webkit-transition: all .3s;
